@@ -1,6 +1,9 @@
 Post-v2.13.0
 ---------------------
    - ovs-vswitchd no longer deletes datapath flows on exit by default.
+   - OpenFlow:
+     * The OpenFlow ofp_desc/serial_num may now be configured by setting the
+       value of other-config:dp-sn in the Bridge table.
 
 
 v2.13.0 - xx xxx xxxx
